--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,18 +4,18 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.1.2'
     }
 }
 
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -28,6 +28,6 @@ android {
         minSdkVersion 21
     }
     dependencies {
-        implementation 'com.scottyab:rootbeer-lib:0.0.7'
+        implementation 'com.scottyab:rootbeer-lib:0.1.0'
     }
 }
